Prevent converter overflow on smaller screens

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -21,3 +21,10 @@
     z-index: initial;
   }
 }
+
+@include media-breakpoint-down(md) {
+  #converter  {
+    min-width: initial;
+    max-width: initial;
+  }
+}
